--- a/package.json
+++ b/package.json
@@ -1,5 +1,31 @@
 {
+  "name": "@web-alchemy/eleventy-plugin-content-dates",
+  "version": "0.0.1",
+  "main": ".eleventy.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@11ty/eleventy": ">=2.0.0"
-  }
+  },
+  "scripts": {
+    "postpublish": "git push origin --all; git push origin --tags",
+    "postversion": "npm publish",
+    "preversion": "npm test",
+    "test": "echo \"No test specified\" && exit 0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/web-alchemy/eleventy-plugin-content-dates.git"
+  },
+  "bugs": {
+    "url": "https://github.com/web-alchemy/eleventy-plugin-content-dates/issues"
+  },
+  "homepage": "https://github.com/web-alchemy/eleventy-plugin-content-dates",
+  "keywords": [
+    "eleventy",
+    "eleventy-plugin",
+    "git",
+    "date"
+  ]
 }
