--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,5 @@
 {
   "scripts": {
-    "start": "eleventy --watch",
-    "start:prod": "NODE_ENV=production eleventy --watch"
+    "start": "eleventy --watch"
   }
 }
